--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">WorkingHoursCalculator</string>
+    <string name="app_name">근무시간 계산기</string>
 
     <string-array name="starting_hour">
         <item>06</item>
